--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,9 @@ bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 # set mouse mode to allow use of mouse for copying, scrolling, etc.
 set -g mouse on
 
-# set -g default-terminal "screen-256color"
-set -g default-terminal "alacritty"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc"
+# set -g default-terminal "alacritty"
 set -g base-index 1
 set -g pane-base-index 1
 set -g history-limit 20000
@@ -83,7 +84,7 @@ set -g status-justify centre              # window list in middle
 set -g status-left-length 85
 set -g status-left "#h : #(ip addr show enp3s0 | grep "inet[^6]" | awk '{print $2}')"
 set -g status-right-length 100
-set -g status-right 'continuum:#{continuum_status}m#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
+set -g status-right ' #{continuum_status}m #(~/apps/hdd_usage.sh) #[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
 #set -g status-right 'continuum:#{continuum_status} | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H'
 #--------------------------------------------------------------#
 
@@ -106,7 +107,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 # copy
 #if-shell 'uname | grep -qi Darwin && which reattach-to-user-namespace > /dev/null' 'bind-key -n -t emacs-copy M-w copy-pipe "reattach-to-user-namespace pbcopy"'
 # paste
-#if-shell 'uname | grep -qi Darwin && which reattach-to-user-namespace > /dev/null' 'bind 
+#if-shell 'uname | grep -qi Darwin && which reattach-to-user-namespace > /dev/null' 'bind
 
 # linux: sudo apt install xclip
 # copy
@@ -115,6 +116,20 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 #if-shell 'uname | grep -qi Linux && which xclip > /dev/null' 'bind-key -n C-y run "xclip -o
 
 #--------------------------------------------------------------#
-run-shell ~/.tmux/plugins/resurrect/resurrect.tmux
-run-shell ~/.tmux/plugins/continuum/continuum.tmux
-run-shell ~/.tmux/plugins/yank/yank.tmux
+# run-shell ~/.tmux/plugins/resurrect/resurrect.tmux
+# run-shell ~/.tmux/plugins/continuum/continuum.tmux
+# run-shell ~/.tmux/plugins/yank/yank.tmux
+
+
+#--------------------------------------------------------------#
+# Plugins
+# https://github.com/tmux-plugins/tpm
+# Add plugins here and reload with "<prefix> + r", then install with "<prefix> + I"
+# set -g @plugin 'fcsonline/tmux-thumbs'
+# set -g @plugin 'laktak/extrakto'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
