--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@
 # add /usr/local/bin/bash
 #===================================================================
 
-# easy tmux reload <leader> r
+# easy tmux reload <prefix> r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 # set mouse mode to allow use of mouse for copying, scrolling, etc.
@@ -45,16 +45,61 @@ bind-key - split-window -v -c "#{pane_current_path}"
 # Added to prevent odd delay when hitting ESC in neovim
 set -sg escape-time 10
 
+# session switcher in popup
+bind C-j display-popup -E "tmux list-sessions -F '#{?session_attached,,#{session_name}}' | grep -v '^$' | fzf --reverse | xargs tmux switch-client -t"
+
 #--------------------------------------------------------------#
 # Pane colors
+# taken from https://github.com/odedlaz/tmux-onedark-theme
+
+onedark_black="#282c34"
+onedark_blue="#61afef"
+onedark_yellow="#e5c07b"
+onedark_red="#e06c75"
+onedark_white="#aab2bf"
+onedark_green="#98c379"
+onedark_visual_grey="#3e4452"
+onedark_comment_grey="#5c6370"
+
+set -g message-fg $onedark_white
+set -g message-bg $onedark_black
+setw -g window-status-fg $onedark_black
+setw -g window-status-bg $onedark_black
+setw -g window-status-attr none
+setw -g window-status-activity-bg $onedark_black
+setw -g window-status-activity-fg $onedark_black
+setw -g window-status-activity-attr none
+setw -g window-status-separator ''
+set -g window-style fg=$onedark_comment_grey
+set -g window-active-style fg=$onedark_white
+set -g pane-border-fg $onedark_white
+set -g pane-border-bg $onedark_black
+set -g pane-active-border-fg $onedark_green
+set -g pane-active-border-bg $onedark_black
+set -g display-panes-active-colour $onedark_yellow
+set -g display-panes-colour $onedark_blue
+set -g status-bg $onedark_black
+set -g status-fg $onedark_white
+set -g @prefix_highlight_fg $onedark_black
+set -g @prefix_highlight_bg $onedark_green
+set -g @prefix_highlight_copy_mode_attr 'fg=$onedark_black,bg=$onedark_green'
+set -g @prefix_highlight_output_prefix '  '
+
+# setw -g automatic-rename off
+set -g allow-rename off
+set -g window-status-format "#[fg=$onedark_white,bg=$onedark_black] #I| #W#{?window_flags,#{window_flags}, } "
+set -g window-status-current-format "#[fg=$onedark_white,bg=$onedark_visual_grey,nobold] #I| #W#{?window_flags,#{window_flags}, } "
+
+
+
 # set active/inactive window styles
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour250,bg=colour235'
-setw -g window-status-current-style fg=white,bg=black
+# set -g window-style 'fg=colour247,bg=colour236'
+# set -g window-active-style 'fg=colour250,bg=colour235'
+# setw -g window-status-current-style fg=white,bg=black
 
 #pane border
-set-option -g pane-border-style 'bg=colour236,fg=colour247'
-set-option -g pane-active-border-style 'bg=colour236,fg=colour112'
+# set-option -g pane-border-style 'bg=colour236,fg=colour247'
+# set-option -g pane-active-border-style 'bg=colour236,fg=colour112'
 #--------------------------------------------------------------#
 
 # Testing git status in tmux
@@ -88,9 +133,9 @@ set -g status-interval 2
 set -g status-justify centre              # window list in middle
 # show host name and IP address on left side of status bar
 set -g status-left-length 85
-set -g status-left "#h : #(ip addr show enp3s0 | grep "inet[^6]" | awk '{print $2}')"
+set -g status-left "#h : #(ip addr show enp3s0 | grep "inet[^6]" | awk '{print $2}') : #S"
 set -g status-right-length 100
-set -g status-right ' #{continuum_status}m #(~/apps/hdd_usage.sh) #[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
+set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/apps/kube-context.sh "$onedark_red")  #{continuum_status}m #[fg=$onedark_white,bg=$onedark_blue]#(~/apps/hdd_usage.sh) #[bg=$onedark_green] #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
 #set -g status-right 'continuum:#{continuum_status} | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H'
 #--------------------------------------------------------------#
 
@@ -120,11 +165,6 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 #if-shell 'uname | grep -qi Linux && which xclip > /dev/null' 'bind-key -n -t emacs-copy M-w copy-pipe "xclip -i -sel p -f | xclip -i -sel c "'
 # paste:
 #if-shell 'uname | grep -qi Linux && which xclip > /dev/null' 'bind-key -n C-y run "xclip -o
-
-#--------------------------------------------------------------#
-# run-shell ~/.tmux/plugins/resurrect/resurrect.tmux
-# run-shell ~/.tmux/plugins/continuum/continuum.tmux
-# run-shell ~/.tmux/plugins/yank/yank.tmux
 
 
 #--------------------------------------------------------------#
