--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,25 +61,17 @@ onedark_green="#98c379"
 onedark_visual_grey="#3e4452"
 onedark_comment_grey="#5c6370"
 
-set -g message-fg $onedark_white
-set -g message-bg $onedark_black
-setw -g window-status-fg $onedark_black
-setw -g window-status-bg $onedark_black
-setw -g window-status-attr none
-setw -g window-status-activity-bg $onedark_black
-setw -g window-status-activity-fg $onedark_black
-setw -g window-status-activity-attr none
+set -g message-style fg=$onedark_white,bg=$onedark_black
+setw -g window-status-style fg=$onedark_black,bg=$onedark_black,none
+setw -g window-status-activity-style fg=$onedark_black,bg=$onedark_black,none
 setw -g window-status-separator ''
 set -g window-style fg=$onedark_comment_grey
 set -g window-active-style fg=$onedark_white
-set -g pane-border-fg $onedark_white
-set -g pane-border-bg $onedark_black
-set -g pane-active-border-fg $onedark_green
-set -g pane-active-border-bg $onedark_black
+set -g pane-border-style fg=$onedark_white,bg=$onedark_black
+set -g pane-active-border-style fg=$onedark_green,bg=$onedark_black
 set -g display-panes-active-colour $onedark_yellow
 set -g display-panes-colour $onedark_blue
-set -g status-bg $onedark_black
-set -g status-fg $onedark_white
+set -g status-style fg=$onedark_white,bg=$onedark_black
 set -g @prefix_highlight_fg $onedark_black
 set -g @prefix_highlight_bg $onedark_green
 set -g @prefix_highlight_copy_mode_attr 'fg=$onedark_black,bg=$onedark_green'
@@ -107,7 +99,7 @@ set -g pane-border-status bottom
 set -g pane-border-format '#(bash ~/.tmux/pane-border-format.sh \
   --pane-current-path=#{pane_current_path} \
   --pane-active=#{pane_active})'
-set -s status-interval 1
+set -g status-interval 1
 #--------------------------------------------------------------#
 
 #--------------------------------------------------------------#
@@ -119,23 +111,28 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind-key -T copy-mode-vi C-h select-pane -L
 bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
+bind-key -T copy-mode-vi C-\\ select-pane -l
 #--------------------------------------------------------------#
 
 #--------------------------------------------------------------#
 # Status bar
+#
+# Script variables
+hdd_drive="/dev/nvme0n1p3"
+network_interface="eno1"
+
 set -g status-interval 2
 set -g status-justify centre              # window list in middle
 # show host name and IP address on left side of status bar
 set -g status-left-length 85
-set -g status-left "#h : #(ip addr show eno1 | grep "inet[^6]" | awk '{print $2}') : #S"
+set -g status-left "#h : #(ip addr show $network_interface | grep "inet[^6]" | awk '{print $2}') : #S"
 set -g status-right-length 100
-set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/apps/kube-context.sh "$onedark_red")  #{continuum_status}m #[fg=$onedark_white,bg=$onedark_blue]#(~/apps/hdd_usage.sh) #[bg=$onedark_green] #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
+set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/apps/kube-context.sh "$onedark_red")  #{continuum_status}m #[fg=$onedark_white,bg=$onedark_blue]#(~/apps/hdd_usage.sh "$hdd_drive") #[bg=$onedark_green] #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
 #set -g status-right 'continuum:#{continuum_status} | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H'
 #--------------------------------------------------------------#
 
@@ -176,6 +173,9 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+# This should be before any 'run' command, attempting to fix error 127
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
