--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
 	prompt = false
 [core]
 	pager = diff-so-fancy | less --tabs=4 -RFX
+	excludesFile = ~/.gitignore
 [color]
 	ui = true
 [color "diff-highlight"]
