--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 [submodule "apps/diff-so-fancy"]
 	path = apps/diff-so-fancy
 	url = git@github.com:so-fancy/diff-so-fancy.git
+[submodule "dotbot"]
+	path = dotbot
+	url = https://github.com/anishathalye/dotbot
+	ignore = dirty
