--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,31 +16,38 @@
 - shell:
     - ['git submodule update --init --recursive', 'Install submodules']
     - ['tic -xe alacritty,alacritty-direct Documents/alacritty.info', 'Setup terminfo']
+    - ['[ ! -d "$HOME/.oh-my-zsh" ] && /bin/sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)" || omz update', 'Setup oh-my-zsh']
 
-# Install NeoVim
+# Install applications (Tmux, NeoVim, etc)
 - shell:
-    - ['curl -L https://github.com/neovim/neovim/releases/download/v0.5.0/nvim.appimage -o ~/Downloads/nvim-stable']
-    - ['chmod u+x ~/Downloads/nvim-stable']
-    - ['mv ~/Downloads/nvim-stable $HOME/bin/nvim']
-
-# Install Tmux 3.2a
-- shell:
-    - ['bin/install-tmux.sh', 'Installing Tmux 3.2a']
-    - ['git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm', 'Installing TPM']
+    - ['bin/install-apps.sh', 'Installing Applications']
 
 - link:
     ~/.config/:
       glob: true
       path: .config/*
+    # ~/vim/sessions:
+    #   glob: true
+    #   path: vim/sessions/*
     ~/.themes/spaceship-prompt: .themes/spaceship-prompt
     ~/.tmux/pane-border-format.sh: .tmux/pane-border-format.sh
     ~/bin/ta: bin/ta
     ~/.aliases: .aliases
+    ~/.cp_functions: .cp_functions
     ~/.exports: .exports
     ~/.functions: .functions
     ~/.gitconfig: .gitconfig
     ~/.pgpass: .pgpass
     ~/.tmux.conf: .tmux.conf
-    ~/.zshrc: .zshrc
-    ~/.antigen.zsh: antigen.zsh
+    ~/.zshrc:
+        path: .zshrc
+        force: true # installing oh-my-zsh will create a default .zhsrc file
 
+- shell:
+    # https://github.com/junegunn/vim-plug/wiki/tips#install-plugins-on-the-command-line
+    # - ['nvim -es -u ~/.config/nvim/init.vim -i NONE -c "PlugInstall" -c "qa"', 'Installing NeoVim Plugins']
+    # https://github.com/tmux-plugins/tpm/blob/master/docs/managing_plugins_via_cmd_line.md
+    - ['~/.tmux/plugins/tpm/bin/install_plugins', 'Installing Tmux Plugins']
+    - ['git clone https://github.com/zsh-users/zsh-syntax-highlighting.git $HOME/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting', "Getting zsh-syntax-highlighting"]
+    - ['git clone https://github.com/spaceship-prompt/spaceship-prompt.git $HOME/.oh-my-zsh/custom/themes/spaceship-prompt --depth=1', 'Getting Spaceship theme']
+    - ['ln -s $HOME/.oh-my-zsh/custom/themes/spaceship-prompt/spaceship.zsh-theme $HOME/.oh-my-zsh/custom/themes/spaceship.zsh-theme', 'Setup Spaceship theme']
