--- a/sudo.conf.yaml
+++ b/sudo.conf.yaml
@@ -14,3 +14,5 @@
 
 - shell:
   - ['chsh -s $(which zsh) $SUDO_USER', 'Set default shell to zsh']
+  - ['curl -LO https://github.com/BurntSushi/ripgrep/releases/download/13.0.0/ripgrep_13.0.0_amd64.deb', 'Downloading ripgrep']
+  - ['dpkg -i ripgrep_13.0.0_amd64.deb', 'Installing ripgrep']
