--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,7 @@
     - ~/bin
     - ~/Downloads
     - ~/vim/sessions
+    - ~/vim/undodir
 
 - shell:
     - ['git submodule update --init --recursive', 'Install submodules']
