--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -129,7 +129,7 @@ set -g status-justify centre              # window list in middle
 set -g status-left-length 85
 set -g status-left "#h : #(ip addr show $network_interface | grep "inet[^6]" | awk '{print $2}') : #S"
 set -g status-right-length 100
-set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/apps/kube-context.sh "$onedark_red") #[fg=$onedark_white,bg=$onedark_blue]#(~/apps/hdd_usage.sh "$hdd_drive") #[bg=$onedark_green] #{net_speed} #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
+set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/.tmux/kube-context.sh "$onedark_red") #[fg=$onedark_white,bg=$onedark_blue]#(~/.tmux/hdd_usage.sh "$hdd_drive") #[bg=$onedark_green] #{net_speed} #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
 #set -g status-right 'continuum:#{continuum_status} | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H'
 #--------------------------------------------------------------#
 
